samples/vscode/vscode-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vscode-sample-svc
spec:
  selector:
    app: vscode-sample
  type: ClusterIP  
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: vscode-sample
